@@ -1,6 +1,6 @@
 Metadata-Version: 1.0
 Name: sx
-Version: 2.10
+Version: 2.11
 Summary: Tool to extract reports and run plug-ins against those extracted reports.
 Home-page: https://fedorahosted.org/sx
 Author: Shane Bradley
